traces/bug_544.txt
examples++-load/MetricKuate.cpp:612: error: DEAD_STORE
  The value written to &hmn2 (type double) is never used.
Showing all 1 steps of the trace


examples++-load/MetricKuate.cpp:612:3: Write of unused value
610.     cout << " MetricKuate " << np << " hmin = "<< hmin << " hmax = " << hmax  << " nv = " << Th.nv <<  endl;
611.     R hmx2=1./(hmax*hmax);
612.     R hmn2=1./(hmin*hmin);
         ^
613.   
614.     ffassert(pm11->N()==Th.nv);
